# voxl

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
include/: voxl.h
samples/: benchmark.c  benchmark.cpp  objviewer.c  objviewer.cpp
src/: internal.h  polyconv.c  polyconv.cpp  tribox.c  tribox.cpp  tribox.h  voxl.c  voxl.cpp
